# Docu

./: CMakeLists.txt  CMakeLists1.txt  \  app.cpp  move.cmd  move.sh  save.json
script/: convertor.py  convertor.spec  genJson.py  pyproject.toml
script/linux-convertor/: convertor
ui/: browserWidget.ui  main.ui  ostatok.ui  prihod.ui  prihodWidget.ui  rashod.ui
